--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.15.0",
+    "axios": "^0.21.1",
+    "faunadb": "^4.3.0",
     "next": "10.2.3",
+    "next-auth": "^3.24.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
@@ -16,6 +20,7 @@
     "stripe": "^8.150.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
     "typescript": "^4.3.2"
