--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.15.0",
+    "@types/stripe": "^8.0.417",
+    "@types/stripejs": "^3.0.5",
     "axios": "^0.21.1",
     "faunadb": "^4.3.0",
     "next": "10.2.3",
